# ai-test-platform

./: .gitignore  CLAUDE.md  README.md  project-init.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_test_execution.py  003_project_update_features.py  004_add_wiki_sync_columns.py  005_add_domain_and_update_enums.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: personas.py
backend/app/agents/prompts/: bi_analytics.py  business_agent.py  consolidation.py  data_architect.py  (+4 more)
backend/app/core/: claude_client.py  database.py  enums.py  exceptions.py
backend/app/executors/: base.py  dbt_executor.py  gx_executor.py  registry.py  sql_executor.py
backend/app/graph/: outer_graph.py  phase_config.py  review_subgraph.py  state.py
backend/app/models/: __init__.py  agent_review.py  brd_chunk.py  clarification.py  phase_history.py  project.py  project_config.py  requirement.py  test_case.py  test_category_map.py  test_execution.py
backend/app/parsers/: docx_parser.py  md_parser.py  pdf_parser.py
backend/app/schemas/: common.py  execution.py  phase.py  project.py  project_config.py
backend/app/services/: document_parser.py  execution_service.py  export_service.py  pipeline_service.py  project_service.py  wiki_sync_service.py
backend/docs/: data-model.md  db-init.yaml
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_graph_structure.py  test_personas.py  test_phase_config.py  test_projects.py
(+91 files in other folders)
